--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         function myFunction() {
 
-          
+
           document.getElementById("MainScreen").src="Intro Animation (1).gif";
 
         }
@@ -103,6 +103,9 @@
               if you didnt see from the animation above my name is Jason Ziemons and I am an Electrical engineer from the University of the Witwatersraand in South Africa.
               Hello! and welcome to my website CV,
                 if you didnt see from the animation above my name is Jason Ziemons and I am an Electrical engineer from the University of the Witwatersraand in South Africa.
+                if you didnt see from the animation above my name is Jason Ziemons and I am an Electrical engineer from the University of the Witwatersraand in South Africa.
+                if you didnt see from the animation above my name is Jason Ziemons and I am an Electrical engineer from the University of the Witwatersraand in South Africa.
+                if you didnt see from the animation above my name is Jason Ziemons and I am an Electrical engineer from the University of the Witwatersraand in South Africa.
       </p>
 
     </div>
@@ -112,84 +115,213 @@
   <hr class="Seperators">
 
   <div class="Education">
-    <h2>Education Background</h2>
+    <h2>Education Background and Work Experience</h2>
     <hr>
   </div>
 
+  <div class="EducationSection">
 
+    <div class="Timeline">
 
+      <div class="Timeline__Component Timeline__Component__border ReducedMargin">
+        <h2>High School - Marian College</h2>
+        <p class="SchoolMarks download" >
+          <a href="Matric certificate.pdf" download> High School Matric Certificate 📥 </a>
+        </p>
+      </div>
 
-    <h3>School</h3>
-    <p>Marian College</p>
-    <p class="SchoolMarks">
-      <a href="Matric certificate.pdf" download> Matric Certificate</a>
-    </p>
-    <hr class="VerticalLineL">
+      <div class="Timeline__Middle">
+          <div class="Timeline__Point"></div>
+      </div>
 
-    <p class="SchoolMarks">
-      Engineering Graphics and Design - 80%
-    </p>
-    <hr class="VerticalLineR">
-    <p class="SchoolMarks">
-      Mathematics - 79%
-    </P>
-    <hr class="VerticalLineL">
-    <p class="SchoolMarks">
-      History - 78%
-    </P>
-    <hr class="VerticalLineR">
-    <p class="SchoolMarks">
-      English Home Language - 77%
-    </P>
-    <hr class="VerticalLineL">
-    <p class="SchoolMarks">
-      Physical Sciences - 72%
-    </P>
-    <hr class="VerticalLineR">
-    <p class="SchoolMarks">
-      Life Orientation - 72%
-    </P>
-    <hr class="VerticalLineL">
-    <p class="SchoolMarks">
-      Afrikaans First Additional Language - 57%
-    </P>
+      <div class="Timeline__Component">
+        <div class="Timeline__date Timeline__dateL"><p class="Years" style="display: inline;">2016</p></div>
+      </div>
 
+      <div class="Timeline__Component Timeline__Component__bg ReducedMargin">
+        <h3 class="Timeline__Title">Grade 12</h3>
+        <p class="Timeline__Paragraph"> This is my sample text, I will be using this for testing purposes, please ignore me.</p>
+      </div>
 
-    <h3>University</h3>
-    <p>University of the Witwatersraand</p>
-    <p> <a href="University Transcript.pdf" download> University Transcript</a> </p>
+      <div class="Timeline__Middle">
+      </div>
 
-    <h3>Self Study</h3>
-    <p> Udemy is the way of the future</p>
+      <div class="Timeline__Component">
+        <div class="Timeline__date Timeline__dateL"></div>
+      </div>
 
+      <div class="Timeline__Component Timeline__Component__bg">
+        <p class="Timeline__Paragraph">
+
+          <p class="SchoolMarks">
+            Engineering Graphics and Design - 80%
+          </p>
+          <p class="SchoolMarks">
+            Mathematics - 79%
+          </P>
+          <p class="SchoolMarks">
+            History - 78%
+          </P>
+          <p class="SchoolMarks">
+            English Home Language - 77%
+          </P>
+          <p class="SchoolMarks">
+            Physical Sciences - 72%
+          </P>
+          <p class="SchoolMarks">
+            Life Orientation - 72%
+          </P>
+          <p class="SchoolMarks">
+            Afrikaans First Additional Language - 57%
+          </P>
+        </p>
+      </div>
+
+      <div class="Timeline__Middle">
+      </div>
+
+      <div class="Timeline__Component">
+        <div class="Timeline__date Timeline__dateL"></div>
+      </div>
+
+      <div class="Timeline__Component">
+          <div class="Timeline__date Timeline__dateR ReducedMarging"><p class="Years" style="display: inline;">2017</p></div>
+      </div>
+
+      <div class="Timeline__Middle">
+        <div class="Timeline__Point"></div>
+      </div>
+
+      <div class="Timeline__Component Timeline__Component__border ReducedMargin">
+        <h2 >University of the Witwatersrand</h2>
+        <p class="SchoolMarks download" >
+          <a href="University Transcript.pdf" download> University Transcript 📥 </a>
+        </p>
+      </div>
+
+        <div class="Timeline__Component">
+
+        </div>
+
+        <div class="Timeline__Middle">
+
+        </div>
+
+        <div class="Timeline__Component Timeline__Component__bg">
+          <h3 class="Timeline__Title">First Year</h3>
+          <p class="Timeline__Paragraph"> This is my sample text, I will be using this for testing purposes, please ignore me.</p>
+        </div>
+
+        <div class="Timeline__Component Timeline__Component__bg">
+          <h3 class="Timeline__Title">Second Year</h3>
+          <p class="Timeline__Paragraph"> This is my sample text, I will be using this for testing purposes, please ignore me.</p>
+        </div>
+
+        <div class="Timeline__Middle">
+            <div class="Timeline__Point"></div>
+        </div>
+
+        <div class="Timeline__Component">
+          <div class="Timeline__date Timeline__dateL"><p class="Years" style="display: inline;">2018</p></div>
+        </div>
+
+        <div class="Timeline__Component">
+          <div class="Timeline__date Timeline__dateR"><p class="Years" style="display: inline;">2019</p></div>
+        </div>
+
+        <div class="Timeline__Middle">
+            <div class="Timeline__Point"></div>
+        </div>
+
+        <div class="Timeline__Component Timeline__Component__bg">
+          <h3 class="Timeline__Title">Third Year</h3>
+          <p class="Timeline__Paragraph"> This is my sample text, I will be using this for testing purposes, please ignore me.</p>
+        </div>
+
+        <div class="Timeline__Component Timeline__Component__bg">
+          <h3 class="Timeline__Title">Combined Third and Fourth Year</h3>
+          <p class="Timeline__Paragraph"> This is my sample text, I will be using this for testing purposes, please ignore me.</p>
+        </div>
+
+        <div class="Timeline__Middle">
+            <div class="Timeline__Point"></div>
+        </div>
+
+        <div class="Timeline__Component">
+          <div class="Timeline__date Timeline__dateL"><p class="Years" style="display: inline;">2020</p></div>
+        </div>
+
+        <div class="Timeline__Component">
+          <div class="Timeline__date Timeline__dateR"><p class="Years" style="display: inline;">2021</p></div>
+        </div>
+
+        <div class="Timeline__Middle">
+            <div class="Timeline__Point"></div>
+        </div>
+
+        <div class="Timeline__Component Timeline__Component__bg">
+          <h3 class="Timeline__Title">Fourth Year</h3>
+          <p class="Timeline__Paragraph"> This is my sample text, I will be using this for testing purposes, please ignore me.</p>
+        </div>
+
+        <div class="Timeline__Component Timeline__Component__border ReducedMargin">
+          <h2>First Position of Employment </h2>
+            <p class="SchoolMarks download" >
+              Salesforce Administrator at TecEx
+            </p>
+        </div>
+
+        <div class="Timeline__Middle">
+            <div class="Timeline__Point"></div>
+        </div>
+
+        <div class="Timeline__Component">
+          <div class="Timeline__date Timeline__dateL"><p class="Years" style="display: inline;">2022</p></div>
+        </div>
+
+        <div class="Timeline__Component Timeline__Component__bg">
+          <h3 class="Timeline__Title">What is a Salesforce Administrator ? </h3>
+          <p class="Timeline__Paragraph"> This is my sample text, I will be using this for testing purposes, please ignore me.</p>
+        </div>
+
+        <div class="Timeline__Middle">
+
+            <div class="Timeline__Point__Bottom"></div>
+        </div>
+
+        <div class="Timeline__Component">
+
+        </div>
+
+    </div>
   </div>
 
 
-  <div class="skills">
-    <hr class="Seperators">
-    <h2>Work Experience</h2>
-    <hr>
-    <div class="skill-row">
-      <img class="Electrical" src="https://cdn-icons-png.flaticon.com/512/2421/2421271.png" alt="">
-      <a href="https://www.flaticon.com/free-icons/prototype" title="prototype icons">Prototype icons created by wanicon - Flaticon</a>
-      <h3>Electrical Systems Design</h3>
-      <p>Through my degree I learnt how to harness the power of electricity, equal to the likes of Zeus and Thor.</p>
-    </div>
-    <div class="skill-row">
-      <img class="Software" src="https://media4.giphy.com/media/qgQUggAC3Pfv687qPC/giphy.gif?cid=ecf05e47qtzmtznninnkgtlh8zdywtluy3eb2oszsmlygpq2&rid=giphy.gif&ct=g" alt="Giphy Art from Domme @dommespace" width="20%" height="20%">
-      <h3>Software Development</h3>
-      <p>I have learnt a few programming languages through my degree and self study</p>
-    </div>
-  </div>
 
 
-
-<div class="SkillsSection">
+<div class="Education">
   <hr>
   <h2>My Skills</h2>
   <hr>
 
 </div>
+
+<div class="Skills">
+
+  <div class="SkillsTab">
+    <h3 class="SkillsTabText">Software Development</h3>
+  </div>
+
+  <div class="SkillsTab">
+    <h3 class="SkillsTabText">Design</h3>
+  </div>
+
+  <div class="SkillsTab">
+    <h3 class="SkillsTabText">High Voltage Applications</h3>
+  </div>
+
+</div>
+
 
 
 <div class="CoverLetter">
