--- a/index.html
+++ b/index.html
@@ -96,9 +96,50 @@
           <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
             <div class="accordion-body">
 
-                <p>
-                  About Me - here I should explain who I am
-                </p>
+              <div Class="row">
+
+                <div class="col-lg-3">
+                  <img class="Jason" src="CV Photo.jpg" alt="Image of Jason Ziemons">
+                </div>
+                <div class="col-lg-9">
+                  <h3>Welcome to my online CV!</h3>
+                  <p class="AboutText">
+                    I am Jason Ziemons, a recent graduate in Electrical Engineering with an ardent passion for software development and a deep fascination for microcontroller programming. My journey in the realm of engineering has been propelled by a drive to innovate, automate, and create streamlined solutions wherever I can.
+                    My foundation as an Electrical Engineer, coupled with my fervor for software development, has equipped me with a dynamic skill set. My journey has been enriched by a variety of experiences, including my successful time in a IT role where I excelled as a Salesforce Administrator. This unique role not only honed my interpersonal abilities but also ingrained in me a solid grasp of technology.
+                    <br /><br />
+                    I am now driven to transition into an engineering role, combining my technological skills with my passion for problem-solving, design, and my desire to constantly keep learning for the next challenge. The exhilarating prospect of contributing to the world of engineering and software by developing my own solutions has fueled my journey with an unwavering sense of purpose.
+                    <br /><br />
+                    Join me as I lead you through my journey, experiences, and projects, each representing a significant milestone in my pursuit of knowledge. From my early academic years, where I immersed myself in the intricacies of Electrical Engineering and my continued development and learning through my time as a Salesforce Administrator.
+                  </p>
+                </div>
+
+                <hr class="HeadingPadding" />
+
+                <div class="col-lg-9">
+                  <h3>Career Objective</h3>
+                  <p class="AboutText">
+                    Ultimately, my goal is to move into a software based role and thrive in an environment that encourages professional development, values creativity, and empowers me to make meaningful contributions to the engineering industry. I am excited to embark on this journey, and I am eager to find a role where I can embrace new challenges, learn continuously, and contribute to shaping the future of technology.
+                    <br /><br />
+                    With a solid foundation in C++, Python, Microsoft VBA, HTML and CSS, I am confident in my ability to contribute effectively to software development and microcontroller-based projects. My experience throughout my degree in microcontroller and electronics based learning and the technical debugging skills I have learnt as a Salesforce Administrator has equipped me with the necessary problem-solving skills and technical acumen to excel in this field.
+                  </p>
+                </div>
+                <div class="col-lg-3">
+                  <i class="Emojis MapMarker Left fa-solid fa-map-location-dot"></i>
+                </div>
+
+                <hr class="HeadingPadding" />
+
+                <div class="col-lg-3">
+                    <i class="Emojis Right fa-solid fa-person-hiking"></i>
+                </div>
+                <div class="col-lg-9">
+                  <h3>Interests and Hobbies</h3>
+                  <p class="AboutText">
+                    In addition to my professional pursuits, my interests and hobbies play a vital role in shaping my personality. I am inherently driven by a passion for continuous growth and achievement. A significant portion of my leisure time is dedicated to further enhancing my programming skills, with recent focus on languages like Python, HTML, and CSS. Engaging with projects involving a Raspberry Pi and this website has provided me with hands-on experience in practical application of these languages. This dynamic approach to learning is mirrored in my personal life as well, where I am an avid enthusiast of outdoor activities. I find solace in the embrace of nature, often embarking on hikes during weekends and indulging in spontaneous short trips to explore new destinations.
+                  </p>
+                </div>
+
+              </div>
 
             </div>
           </div>
@@ -115,9 +156,68 @@
           <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
             <div class="accordion-body">
 
-                <p>
-                  Education - What do I know, how can i help their company
-                </p>
+              <div class="timeline">
+                <div class="container left">
+                  <div class="date">2012 - 2016</div>
+                  <i class="icon fa fa-school"></i>
+                  <div class="content">
+                    <h2>High School</h2>
+                    <p>
+
+                    </p>
+                  </div>
+                </div>
+                <div class="container right">
+                  <div class="date">2017 - 2021</div>
+                  <i class="icon fa fa-graduation-cap"></i>
+                  <div class="content">
+                    <h2>University</h2>
+                    <p>
+                      Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                    </p>
+                  </div>
+                </div>
+                <div class="container left">
+                  <div class="date">10 Jul</div>
+                  <i class="icon fa fa-user"></i>
+                  <div class="content">
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <p>
+                      Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                    </p>
+                  </div>
+                </div>
+                <div class="container right">
+                  <div class="date">18 May</div>
+                  <i class="icon fa fa-running"></i>
+                  <div class="content">
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <p>
+                      Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                    </p>
+                  </div>
+                </div>
+                <div class="container left">
+                  <div class="date">10 Feb</div>
+                  <i class="icon fa fa-cog"></i>
+                  <div class="content">
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <p>
+                      Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                    </p>
+                  </div>
+                </div>
+                <div class="container right">
+                  <div class="date">01 Jan</div>
+                  <i class="icon fa fa-certificate"></i>
+                  <div class="content">
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <p>
+                      Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                    </p>
+                  </div>
+                </div>
+              </div>
 
             </div>
           </div>
@@ -167,7 +267,7 @@
 
     <section id="GetInTouch">
 
-        <h2> Get in Touch <i class="fa-solid fa-phone-volume"></i></h2>
+      <h2> Get in Touch <i class="fa-solid fa-phone-volume"></i></h2>
 
     </section>
 
