--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 <a class="nav-link" href="#MySkills">Skills <i class="fa-solid fa-gears"></i></a>
               </li>
 
-              <!-- <li class="nav-item">
-                <a class="nav-link" href="#CoverLetter">Cover Letter <i class="fa-solid fa-file-contract"></i></a>
-              </li> -->
+              <li class="nav-item">
+                <a class="nav-link" href="#PersonalProjects">Projects <i class="fa-solid fa-hand-holding-heart"></i></a>
+              </li>
 
               <li class="nav-item">
                 <a class="nav-link" href="#MyReferences">References <i class="fa-solid fa-users"></i></a>
@@ -178,40 +178,30 @@
                   </div>
                 </div>
                 <div class="container left">
-                  <div class="date">10 Jul</div>
-                  <i class="icon fa fa-user"></i>
+                  <div class="date">2021 - 2021</div>
+                  <i class="icon fa-solid fa-code-branch"></i>
                   <div class="content">
-                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <h2>Honours Project</h2>
                     <p>
                       Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
                     </p>
                   </div>
                 </div>
                 <div class="container right">
-                  <div class="date">18 May</div>
-                  <i class="icon fa fa-running"></i>
+                  <div class="date">2022 - 2023</div>
+                  <i class="icon fa-brands fa-salesforce"></i>
                   <div class="content">
-                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <h2>Salesforce Administrator</h2>
                     <p>
                       Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
                     </p>
                   </div>
                 </div>
                 <div class="container left">
-                  <div class="date">10 Feb</div>
-                  <i class="icon fa fa-cog"></i>
+                  <div class="date">TBC...<i class="icon fa-solid fa-person-digging"></i></div>
+                  <i class="icon fa-solid fa-file-signature"></i>
                   <div class="content">
-                    <h2>Lorem ipsum dolor sit amet</h2>
-                    <p>
-                      Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
-                    </p>
-                  </div>
-                </div>
-                <div class="container right">
-                  <div class="date">01 Jan</div>
-                  <i class="icon fa fa-certificate"></i>
-                  <div class="content">
-                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <h2>The Next Adventure</h2>
                     <p>
                       Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
                     </p>
@@ -235,9 +225,120 @@
           <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
             <div class="accordion-body">
 
-                <p>
-                  My Skills
-                </p>
+              <div class="row row-cols-1 row-cols-md-3 ">
+                <div class="col">
+                  <div class="card h-100">
+                    <img src="Engineering.png" class="skillImages card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title bold">Electrical Engineering</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+
+                      <ul class="list-group list-group-flush">
+                        <li class="list-group-item">An item</li>
+                        <li class="list-group-item">A second item</li>
+                        <li class="list-group-item">A third item</li>
+                      </ul>
+
+                    </div>
+                    <div class="card-footer">
+
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100">
+                    <img src="programming.png" class="skillImages card-img-top" alt="...">
+                    <div class="card-body">
+
+                      <h5 class="card-title bold">Software Development</h5>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+
+                      <ul class="list-group list-group-flush">
+                        <li class="list-group-item">An item</li>
+                        <li class="list-group-item">A second item</li>
+                        <li class="list-group-item">A third item</li>
+                      </ul>
+
+                    </div>
+                    <div class="card-footer">
+
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100">
+                    <img src="teamwork.png" class="skillImages card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title bold">Project Development</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+
+                      <ul class="list-group list-group-flush">
+                        <li class="list-group-item">An item</li>
+                        <li class="list-group-item">A second item</li>
+                        <li class="list-group-item">A third item</li>
+                      </ul>
+
+                    </div>
+                    <div class="card-footer">
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="PersonalProjects">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
+              <h2 class="AccordionHeaderFormat">Personal Projects <i class="fa-solid fa-hand-holding-heart"></i></h2>
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
+            <div class="accordion-body">
+
+              <div id="carouselExampleDark" class="HeadingPadding carousel carousel-dark slide">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="Engineering.png" class="CarouselImages" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>First slide label</h5>
+                      <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item" data-bs-interval="2000">
+                    <img src="programming.png" class="CarouselImages" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Second slide label</h5>
+                      <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="teamwork.png" class="CarouselImages" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Third slide label</h5>
+                      <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
 
             </div>
           </div>
@@ -247,28 +348,47 @@
       <section id="MyReferences">
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
               <h2 class="AccordionHeaderFormat">My References <i class="fa-solid fa-users"></i></h2>
             </button>
           </h2>
-          <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
+          <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFive">
             <div class="accordion-body">
 
-                <p>
-                  My References
-                </p>
+                <div class="row">
+                  <div class="col-4">
+                    <div class="CentreButtons list-group" id="list-tab" role="tablist">
+                      <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home">Leandro Carvalho (Senior Salesforce Administrator)</a>
+                      <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="list-profile">Relwyn Pillay (Salesforce Administrator)</a>
+                      <a class="list-group-item list-group-item-action" id="list-messages-list" data-bs-toggle="list" href="#list-messages" role="tab" aria-controls="list-messages">Christiaan Van Der Merwe (Lead Front End Developer) </a>
+                      <a class="list-group-item list-group-item-action" id="list-settings-list" data-bs-toggle="list" href="#list-settings" role="tab" aria-controls="list-settings">Jiyaad Lai (University Colleague)</a>
+                    </div>
+                  </div>
+                  <div class="col-8">
+                    <div class="tab-content" id="nav-tabContent">
+                      <div class="ReferenceContent tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretiumLorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretiumLorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretiumLorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium</div>
+                      <div class="ReferenceContent tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">...</div>
+                      <div class="ReferenceContent tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">...</div>
+                      <div class="ReferenceContent tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">...</div>
+                    </div>
+                  </div>
+                </div>
+
 
             </div>
           </div>
         </div>
       </section>
 
+
     </div>
 
-    <section id="GetInTouch">
+    <section id="GetInTouch" class="ContactMeBackground">
 
-      <h2> Get in Touch <i class="fa-solid fa-phone-volume"></i></h2>
-
+      <h4 class="headingspace"> Get in Touch <i class="fa-solid fa-comments"></i></h2>
+      <p> <a class = "urlStyle" href="http://www.linkedin.com/in/jasonziemons" target="_blank"><i class="contactMeIcons fa-brands fa-linkedin"></i> &nbsp; Jason Ziemons</a></p>
+      <p> <a class = "urlStyle" href="mailto: jasonziemons9@gmail.com"><i class="contactMeIcons fa-solid fa-envelope"></i> &nbsp; jasonziemons9@gmail.com</a></p>
+      <p> <a class = "urlStyle" href="tel:+27823059560"><i class="contactMeIcons fa-solid fa-phone-volume"></i> &nbsp; +27 82 305 9560</a></p>
     </section>
 
 
