--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@
       </section>
 
 
+
+
       <section id="MySkills">
         <div class="accordion-item">
           <h2 class="accordion-header">
@@ -225,18 +227,21 @@
           <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
             <div class="accordion-body">
 
-              <div class="row row-cols-1 row-cols-md-3 ">
+              <div class="row row-cols-1 row-cols-md-3 row-cols-sm-1">
                 <div class="col">
                   <div class="card h-100">
                     <img src="Engineering.png" class="skillImages card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title bold">Electrical Engineering</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text">These are skills I have developed through my studies as well as skills nurtured through my hobbies.</p>
 
                       <ul class="list-group list-group-flush">
-                        <li class="list-group-item">An item</li>
-                        <li class="list-group-item">A second item</li>
-                        <li class="list-group-item">A third item</li>
+                        <hr class ="RemoveMargins" />
+                        <li class="list-group-item">Electronic Design <br /> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-regular fa-circle"></i> <i class="fa-regular fa-circle"></i> <i class="fa-regular fa-circle"></i></li>
+                        <li class="list-group-item">Microcontroller Implementations <br /> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle-half-stroke"></i> <i class="fa-regular fa-circle"></i> <i class="fa-regular fa-circle"></i></li>
+                        <li class="list-group-item">Control Systems Design <br /> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-regular fa-circle"></i> <i class="fa-regular fa-circle"></i> <i class="fa-regular fa-circle"></i></li>
+                        <li class="list-group-item">High Voltage Applications <br /> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle-half-stroke"></i> <i class="fa-regular fa-circle"></i> <i class="fa-regular fa-circle"></i></li>
+                        <li class="list-group-item">Circuit Simulation <br /> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle-half-stroke"></i> <i class="fa-regular fa-circle"></i> <i class="fa-regular fa-circle"></i> </li>
                       </ul>
 
                     </div>
@@ -251,12 +256,15 @@
                     <div class="card-body">
 
                       <h5 class="card-title bold">Software Development</h5>
-                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                      <p class="card-text">These skills represent my confidence in the following programming languages as a result of personal learning and use in my workplace.</p>
 
                       <ul class="list-group list-group-flush">
-                        <li class="list-group-item">An item</li>
-                        <li class="list-group-item">A second item</li>
-                        <li class="list-group-item">A third item</li>
+                        <hr class ="RemoveMargins" />
+                        <li class="list-group-item">C++ <br /> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-regular fa-circle"></i> <i class="fa-regular fa-circle"></i> <i class="fa-regular fa-circle"></i></li>
+                        <li class="list-group-item">Python <br /> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle-half-stroke"></i> <i class="fa-regular fa-circle"></i> <i class="fa-regular fa-circle"></i> <i class="fa-regular fa-circle"></i></li>
+                        <li class="list-group-item">HTML <br /> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-regular fa-circle"></i> <i class="fa-regular fa-circle"></i></li>
+                        <li class="list-group-item">CSS <br /> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-regular fa-circle"></i> <i class="fa-regular fa-circle"></i></li>
+                        <li class="list-group-item"> Microsoft VBA <br /> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle-half-stroke"></i> <i class="fa-regular fa-circle"></i> </li>
                       </ul>
 
                     </div>
@@ -269,13 +277,16 @@
                   <div class="card h-100">
                     <img src="teamwork.png" class="skillImages card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title bold">Project Development</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                      <h5 class="card-title bold">Soft Skills </h5>
+                      <p class="card-text"> This section represents the skills I have obtained in a corporate working environment and represent my work place management and team based performance.</p>
 
                       <ul class="list-group list-group-flush">
-                        <li class="list-group-item">An item</li>
-                        <li class="list-group-item">A second item</li>
-                        <li class="list-group-item">A third item</li>
+                        <hr class ="RemoveMargins" />
+                        <li class="list-group-item">Team Work <br /> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle-half-stroke"></i> <i class="fa-regular fa-circle"></i></li>
+                        <li class="list-group-item">Stakeholder and Client Management<br /> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-regular fa-circle"></i> <i class="fa-regular fa-circle"></i></li>
+                        <li class="list-group-item"> Interpersonal Skills <br /> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-regular fa-circle"></i></li>
+                        <li class="list-group-item">Adaptability<br /> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-regular fa-circle"></i> <i class="fa-regular fa-circle"></i> </li>
+                        <li class="list-group-item">Conflict Management<br /> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle-half-stroke"></i> <i class="fa-regular fa-circle"></i> </li>
                       </ul>
 
                     </div>
