--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-              <h2 class="AccordionHeaderFormat"> Education <i class="fa-solid fa-graduation-cap"></i></h2>
+              <h2 class="AccordionHeaderFormat"> Education and Experience <i class="fa-solid fa-graduation-cap"></i></h2>
             </button>
           </h2>
           <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
@@ -163,7 +163,9 @@
                   <div class="content">
                     <h2>High School</h2>
                     <p>
-
+                      I went to Marist Brothers Linmeyer where I took Engineering Graphics and design (EGD), Core mathematics, Physical Science and History as my set of subjects and achieved a matric average of 74% Across all subjects.
+                      <br /><br />
+                      <a class ="urlStyle" href ="Matric certificate.pdf" attributes-list download > <i class="fa-solid fa-download"></i> Matric Certificate </a>
                     </p>
                   </div>
                 </div>
@@ -173,17 +175,25 @@
                   <div class="content">
                     <h2>University</h2>
                     <p>
-                      Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                      I studied Electrical and Information engineering at the University of the Witwatersrand in Johannesburg. My degree was made up of high and low voltage electrical design, C++ software development, Arduino microcontroller programming and control systems design.<br /><br /> In first year I was selected as a Golden key recipient for being in the top 10% and at the end of my degree I achieved a overall GPA score of 68.26%. Additionally I took a further course for power engineering which revolved around design considerations for the protection of high power systems.
+                      <br /><br />
+                      <a class ="urlStyle" href ="University Transcript.pdf" attributes-list download > <i class="fa-solid fa-download"></i> University Transcript </a>
+                      <br />
+                      <a class ="urlStyle" href ="Golden key Certificate.pdf" attributes-list download > <i class="fa-solid fa-download"></i> Golden Key Certificate </a>
                     </p>
                   </div>
                 </div>
                 <div class="container left">
-                  <div class="date">2021 - 2021</div>
+                  <div class="date">2021 - 2022</div>
                   <i class="icon fa-solid fa-code-branch"></i>
                   <div class="content">
                     <h2>Honours Project</h2>
                     <p>
-                      Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                      My honours project took the software route of my degree where we were tasked with using machine learning methods to identify and classify depictions of lighning in 18th century paintings. The goal was to determine if Benjamin Franklins presence had an impact on art culture during his time spent in France. In this project we trained and modified a Convolutional Neural Network (CNN) in Matlab to achieve our goal. A variant of this paper was published on IEEE and was showcased at the 2022 International Conference on Lightning Protection (ICLP) in Cape Town.
+                      <br /><br />
+                      <a class ="urlStyle" href ="EIE_Laboratory_1724762.pdf" attributes-list download > <i class="fa-solid fa-download"></i> Honours Project Final Report </a>
+                      <br />
+                      <a class ="urlStyle" href ="https://ieeexplore.ieee.org/abstract/document/9942464" target="_blank" > <i class="fa-solid fa-download"></i> IEEE Publication </a>
                     </p>
                   </div>
                 </div>
@@ -193,17 +203,19 @@
                   <div class="content">
                     <h2>Salesforce Administrator</h2>
                     <p>
-                      Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                      As a Salesforce Administrator there are 2 sides to the job which have developed different aspects of my hard and soft skill sets. The technical aspects of the job are based in debugging Apex and Javascript code in order to solve issues in the system, we are also tasked with the creation of logic based formulas and Flow automations to improve the business workflow. In this I have also self learnt Excel VBA programming and Python to assist with automating bulk data transfers to Salesforce.
+                      <br /><br />
+                      On the side of soft skills I go through a case/ticket rotation and project development role that has me resolving issues for many company stakeholders and scoping new implementations that are required in the Organization.
                     </p>
                   </div>
                 </div>
                 <div class="container left">
-                  <div class="date">TBC...<i class="icon fa-solid fa-person-digging"></i></div>
+                  <div class="date"><i class="icon fa-solid fa-person-digging"></i> TBC...</div>
                   <i class="icon fa-solid fa-file-signature"></i>
                   <div class="content">
                     <h2>The Next Adventure</h2>
                     <p>
-                      Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                      My goal is to move into a software development role and start learning the skills to become a full stack developer.
                     </p>
                   </div>
                 </div>
