--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   </head>
   <body>
 
+<!-- <a href="https://www.flaticon.com/free-icons/hiking" title="hiking icons">Hiking icons created by Chattapat.k - Flaticon</a> -->
+<!-- <a href="https://www.flaticon.com/free-icons/goal" title="goal icons">Goal icons created by Freepik - Flaticon</a> -->
     <section id="IntroSection">
 
       <div class="container-fluid">
@@ -98,7 +100,7 @@
 
               <div Class="row">
 
-                <div class="col-lg-3">
+                <div class="col-lg-3 DivScale">
                   <img class="Jason" src="CV Photo.jpg" alt="Image of Jason Ziemons">
                 </div>
                 <div class="col-lg-9">
@@ -123,14 +125,14 @@
                     With a solid foundation in C++, Python, Microsoft VBA, HTML and CSS, I am confident in my ability to contribute effectively to software development and microcontroller-based projects. My experience throughout my degree in microcontroller and electronics based learning and the technical debugging skills I have learnt as a Salesforce Administrator has equipped me with the necessary problem-solving skills and technical acumen to excel in this field.
                   </p>
                 </div>
-                <div class="col-lg-3">
-                  <i class="Emojis MapMarker Left fa-solid fa-map-location-dot"></i>
+                <div class="col-lg-3 DivScale">
+                  <img class="goal" src="goal.png" alt="Goal image">
                 </div>
 
                 <hr class="HeadingPadding" />
 
-                <div class="col-lg-3">
-                    <i class="Emojis Right fa-solid fa-person-hiking"></i>
+                <div class="col-lg-3 DivScale">
+                    <img class="hobby" src="route.png" alt="Hobby image">
                 </div>
                 <div class="col-lg-9">
                   <h3>Interests and Hobbies</h3>
